adding python to docker image to use for pdb_extract and for empiar deposition script
