# docs/swagger.json
@@ -7,6 +7,87 @@
         "version": "api/v1"
     },
     "paths": {
+        "/empiar/metadata": {
+            "post": {
+                "description": "NA",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "empiar"
+                ],
+                "summary": "creates a json file with metadata for deposition to EMPIAR",
+                "parameters": [
+                    {
+                        "description": "Scientific metadata as a JSON string; expects elements from OSCEM on the top level",
+                        "name": "scientificMetadata",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "json file with metadata",
+                        "schema": {
+                            "$ref": "#/definitions/empiar.Imageset"
+                        }
+                    },
+                    "400": {
+                        "description": "Error response",
+                        "schema": {
+                            "$ref": "#/definitions/onedep.ResponseType"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/onedep.ResponseType"
+                        }
+                    }
+                }
+            }
+        },
+        "/empiar/schema": {
+            "get": {
+                "description": "NA",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "empiar"
+                ],
+                "summary": "creates a json file with metadata for deposition to EMPIAR",
+                "responses": {
+                    "200": {
+                        "description": "base64 encoded schema",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Error response",
+                        "schema": {
+                            "$ref": "#/definitions/onedep.ResponseType"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/onedep.ResponseType"
+                        }
+                    }
+                }
+            }
+        },
         "/onedep": {
             "post": {
                 "description": "Create a new deposition by uploading experiment and user details to OneDep API.",
@@ -17,7 +98,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Create a new deposition to OneDep",
                 "parameters": [
@@ -63,7 +144,7 @@
                     "application/octet-stream"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Get a cif file with metadata for manual deposition in OneDep",
                 "parameters": [
@@ -109,7 +190,7 @@
                     "application/octet-stream"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Get a cif file with metadata and coordinates for manual deposition in OneDep",
                 "parameters": [
@@ -160,7 +241,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Add file, pixel spacing, contour level and description to deposition in OneDep",
                 "parameters": [
@@ -229,7 +310,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Add a cif file with metadata to deposition in OneDep",
                 "parameters": [
@@ -287,7 +368,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Add coordinates and description to deposition in OneDep",
                 "parameters": [
@@ -352,7 +433,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deposition"
+                    "onedep"
                 ],
                 "summary": "Process deposition to OneDep",
                 "parameters": [
@@ -409,12 +490,71 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "400": {
+                        "description": "Error response",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "empiar.Imageset": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "data_format": {
+                    "type": "string"
+                },
+                "details": {
+                    "type": "string"
+                },
+                "directory": {
+                    "type": "string"
+                },
+                "frames_per_image": {
+                    "type": "integer"
+                },
+                "header_format": {
+                    "type": "string"
+                },
+                "image_height": {
+                    "type": "integer"
+                },
+                "image_width": {
+                    "type": "integer"
+                },
+                "micrographs_file_pattern": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "num_images_or_tilt_series": {
+                    "type": "integer"
+                },
+                "picked_particles_directory": {
+                    "type": "string"
+                },
+                "picked_particles_file_pattern": {
+                    "type": "string"
+                },
+                "pixel_height": {
+                    "type": "number"
+                },
+                "pixel_width": {
+                    "type": "number"
+                },
+                "voxel_type": {
+                    "type": "string"
+                }
+            }
+        },
         "onedep.CreatedDeposition": {
             "type": "object",
             "properties": {
@@ -444,7 +584,9 @@
                 "errors": {
                     "$ref": "#/definitions/onedep.OneDepError"
                 },
-                "experiments": {},
+                "experiments": {
+                    "description": "FIX ME actual response type does not correspond to the documented."
+                },
                 "hold_exp_date": {
                     "type": "string"
                 },
@@ -481,23 +623,25 @@
                     "type": "string"
                 },
                 "errors": {
-                    "type": "string"
+                    "description": "FIX ME actual response type does not correspond to the documented."
                 },
                 "id": {
                     "type": "integer"
                 },
                 "metadata": {
+                    "description": "not there",
                     "type": "object",
                     "additionalProperties": {}
                 },
                 "name": {
+                    "description": "not there",
                     "type": "string"
                 },
                 "type": {
                     "$ref": "#/definitions/onedep.OneDepType"
                 },
                 "warnings": {
-                    "type": "string"
+                    "description": "FIX ME actual response type does not correspond to the documented."
                 }
             }
         },
