# main.go
@@ -1,12 +1,16 @@
 package main
 
 import (
+	"bufio"
+	"compress/gzip"
+	b64 "encoding/base64"
 	"encoding/json"
 	"fmt"
 	"io"
 	"mime/multipart"
 	"net/http"
 	"os"
+	"os/exec"
 	"strings"
 
 	"github.com/SwissOpenEM/Depositor/depositions/onedep"
@@ -24,8 +28,8 @@ import (
 //	@description	Rest API for communication between SciCat frontend and depositor backend. Backend service enables deposition of datasets to OneDep API.
 
 var version string = "DEV"
-var PORT string = getEnv("PORT", "8888")
-var ALLOW_ORIGINS string = getEnv("ALLOW_ORIGINS", "http://localhost:4200")
+var PORT string = getEnv("PORT", "8080")
+var ALLOW_ORIGINS string = getEnv("ALLOW_ORIGINS", "http://localhost:4201")
 
 func getEnv(key, defaultValue string) string {
 	if value, exists := os.LookupEnv(key); exists {
@@ -55,10 +59,29 @@ func convertMultipartFileToFile(file multipart.File) (*os.File, error) {
 	return os.Open(tempFile.Name())
 }
 
+func IsValidJSON(str string) bool {
+	var js json.RawMessage
+	return json.Unmarshal([]byte(str), &js) == nil
+}
+
+func IsGzipped(reader *os.File) (bool, error) {
+	bReader := bufio.NewReader(reader)
+	testBytes, err := bReader.Peek(64) //read a few bytes without consuming
+	if err != nil {
+		return false, err
+	}
+	contentType := http.DetectContentType(testBytes)
+	if strings.Contains(contentType, "x-gzip") {
+		return true, nil
+	} else {
+		return false, nil
+	}
+}
+
 // Create handles the creation of a new deposition
 // @Summary Create a new deposition to OneDep
 // @Description Create a new deposition by uploading experiment and user details to OneDep API.
-// @Tags deposition
+// @Tags onedep
 // @Accept application/json
 // @Produce json
 // @Param	request	body	onedep.RequestCreate	true "User information"
@@ -120,7 +143,7 @@ func Create(c *gin.Context) {
 // AddFiles handles adding files to an existing deposition. It also opens a header of mrc files and extracts the pixel spacing
 // @Summary Add file, pixel spacing, contour level and description to deposition in OneDep
 // @Description Uploading file, and metadata to OneDep API.
-// @Tags deposition
+// @Tags onedep
 // @Accept multipart/form-data
 // @Produce json
 // @Param depID path string true "Deposition ID to which a file should be uploaded"
@@ -218,7 +241,7 @@ func AddFile(c *gin.Context) {
 // AddMetadata handles adding metadata to an existing deposition.
 // @Summary Add a cif file with metadata to deposition in OneDep
 // @Description Uploading metadata file to OneDep API. This is created by parsing the JSON metadata into the converter.
-// @Tags deposition
+// @Tags onedep
 // @Accept multipart/form-data
 // @Produce json
 // @Param depID path string true "Deposition ID to which a file should be uploaded"
@@ -277,8 +300,8 @@ func AddMetadata(c *gin.Context) {
 	cifText, err := parser.EMDBconvert(
 		scientificMetadata,
 		"",
-		"conversions.csv",
-		"mmcif_pdbx_v50.dic",
+		"data/conversions.csv",
+		"data/mmcif_pdbx_v50.dic",
 	)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -335,7 +358,7 @@ func AddMetadata(c *gin.Context) {
 // AddCoordinates handles adding coordinates files to an existing deposition.
 // @Summary Add coordinates and description to deposition in OneDep
 // @Description Uploading file to OneDep API.
-// @Tags deposition
+// @Tags onedep
 // @Accept multipart/form-data
 // @Produce json
 // @Param depID path string true "Deposition ID to which a file should be uploaded"
@@ -360,6 +383,7 @@ func AddCoordinates(c *gin.Context) {
 	bearer := c.PostForm("jwtToken")
 	fileHeader := c.Request.MultipartForm.File["file"][0] //file
 
+	// parse extracted metadata from SciCat
 	metadataStr := c.PostForm("scientificMetadata")
 	if metadataStr == "{}" {
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -368,7 +392,7 @@ func AddCoordinates(c *gin.Context) {
 		})
 		return
 	}
-	// Parse  JSON string into the Metadata
+	// Parse  JSON string into the OSCEM format
 	var scientificMetadata map[string]any
 	err = json.Unmarshal([]byte(metadataStr), &scientificMetadata)
 	if err != nil {
@@ -400,6 +424,14 @@ func AddCoordinates(c *gin.Context) {
 	}
 	defer file.Close()
 
+	passedName := fileHeader.Filename
+	var isPDB = false
+	passedNameChunks := strings.Split(passedName, ".")
+	for i := range passedNameChunks {
+		if passedNameChunks[i] == "pdb" {
+			isPDB = true
+		}
+	}
 	fileTmp, err := convertMultipartFileToFile(file)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -410,12 +442,73 @@ func AddCoordinates(c *gin.Context) {
 	}
 	defer file.Close()
 
+	cifFileForConverter := fileTmp // set file to be reused for untaring un-pdb-ing and then to use for conversion
+
+	gzipped, err := IsGzipped(fileTmp)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "file_invalid",
+			"message": fmt.Sprintf("failed to open cif file to read coordinates: %v", err.Error()),
+		})
+		return
+	}
+	if gzipped {
+		_, err = fileTmp.Seek(0, io.SeekStart)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"status":  "file_invalid",
+				"message": fmt.Sprintf("failed to reset file pointer: %v", err.Error()),
+			})
+			return
+		}
+
+		gzipReader, err := gzip.NewReader(fileTmp)
+		if err != nil {
+
+			c.JSON(http.StatusBadRequest, gin.H{
+				"status":  "file_invalid",
+				"message": fmt.Sprintf("failed to open gzipped cif file : %v", err.Error()),
+			})
+			return
+		}
+		defer gzipReader.Close()
+
+		// create a temporary cif file that will be used for a deposition
+		cifFileForConverter, err = os.CreateTemp("", "metadata.cif")
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"status":  "file_invalid",
+				"message": fmt.Sprintf("failed to create cif file to combine metadata and coordinates: %v", err.Error()),
+			})
+			return
+		}
+
+		// fileUncompressed := cifFileForConverter.Name()
+		_, err = io.Copy(cifFileForConverter, gzipReader)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"status":  "file_invalid",
+				"message": fmt.Sprintf("failed to copy coordinates to temporary cif file: %v", err.Error()),
+			})
+			return
+		}
+	} else if isPDB {
+		cPy := exec.Command("pdb_extract.py -EM -iPDB " + cifFileForConverter.Name() + " -o " + fileScientificMetaPath)
+		err := cPy.Run()
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"status":  "pdb_invalid",
+				"message": fmt.Sprintf("failed to convert pdb to mmCIF: %v", err.Error()),
+			})
+		}
+
+	}
 	cifText, err := parser.PDBconvertFromFile(
 		scientificMetadata,
 		"",
-		"conversions.csv",
-		"mmcif_pdbx_v50.dic",
-		fileTmp,
+		"data/conversions.csv",
+		"data/mmcif_pdbx_v50.dic",
+		cifFileForConverter,
 	)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -424,6 +517,8 @@ func AddCoordinates(c *gin.Context) {
 		})
 		return
 	}
+
+	// defer os.Remove(fileUncompressed)
 
 	err = parser.WriteCif(cifText, fileScientificMetaPath)
 	if err != nil {
@@ -476,7 +571,7 @@ func AddCoordinates(c *gin.Context) {
 // DownloadMetadata handles getting a cif file with metadata.
 // @Summary Get a cif file with metadata for manual deposition in OneDep
 // @Description Downloading a metadata file. Invokes converter and starts download.
-// @Tags deposition
+// @Tags onedep
 // @Accept application/json
 // @Produce application/octet-stream
 // @Param scientificMetadata body object true "Scientific metadata as a JSON string; expects elements from OSCEM on the top level"
@@ -510,8 +605,8 @@ func DownloadMetadata(c *gin.Context) {
 	cifText, err := parser.EMDBconvert(
 		scientificMetadata,
 		"",
-		"conversions.csv",
-		"mmcif_pdbx_v50.dic",
+		"data/conversions.csv",
+		"data/mmcif_pdbx_v50.dic",
 	)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -539,7 +634,7 @@ func DownloadMetadata(c *gin.Context) {
 // DownloadCoordinates handles parsing an existing cif and metadata and downloading a new cif file.
 // @Summary Get a cif file with metadata and coordinates for manual deposition in OneDep
 // @Description Downloading a metadata file. Invokes converter and starts download.
-// @Tags deposition
+// @Tags onedep
 // @Accept multipart/form-data
 // @Produce application/octet-stream
 // @Param scientificMetadata formData string true "Scientific metadata as a JSON string; expects elements from OSCEM on the top level"
@@ -614,8 +709,8 @@ func DownloadCoordinatesWithMetadata(c *gin.Context) {
 	cifText, err := parser.PDBconvertFromFile(
 		scientificMetadata,
 		"",
-		"conversions.csv",
-		"mmcif_pdbx_v50.dic",
+		"data/conversions.csv",
+		"data/mmcif_pdbx_v50.dic",
 		fileTmp,
 	)
 	if err != nil {
@@ -644,7 +739,7 @@ func DownloadCoordinatesWithMetadata(c *gin.Context) {
 // Create handles the creation of a new deposition
 // @Summary Process deposition to OneDep
 // @Description Process a deposition in OneDep API.
-// @Tags deposition
+// @Tags onedep
 // @Accept application/json
 // @Produce json
 // @Param depID path string true "Deposition ID to which a file should be uploaded"
@@ -665,6 +760,101 @@ func StartProcess(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"fileID": depID})
 }
 
+// EmpiarMetadata handles creating of json file according to schema at https://github.com/emdb-empiar/empiar-depositor/blob/master/empiar_depositor/empiar_deposition.schema.json
+// @Summary creates a json file with metadata for deposition to EMPIAR
+// @Description NA
+// @Tags empiar
+// @Accept application/json
+// @Produce json
+// @Param scientificMetadata body object true "Scientific metadata as a JSON string; expects elements from OSCEM on the top level"
+// @Success 200 {object} empiar.Imageset "json file with metadata"
+// @Failure 400 {object} onedep.ResponseType "Error response"
+// @Failure 500 {object} onedep.ResponseType "Internal server error"
+// @Router /empiar/metadata [post]
+func EmpiarMetadata(c *gin.Context) {
+	var scientificMetadata map[string]interface{}
+
+	// Bind the JSON payload into a metadata
+	if err := c.ShouldBindJSON(&scientificMetadata); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "invalid_request_body",
+			"message": fmt.Sprintf("Failed to parse metadata body: %v", err.Error()),
+		})
+		return
+	}
+	// create a temporary cif file that will be used for a deposition
+	fileScientificMeta, err := os.CreateTemp("", "metadata.cif")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "cif_creation_fails",
+			"message": "Failed to create a file to write cif file with metadata.",
+		})
+		return
+	}
+	fileScientificMetaPath := fileScientificMeta.Name()
+
+	// convert OSCEM-JSON to mmCIF
+	cifText, err := parser.EMDBconvert(
+		scientificMetadata,
+		"",
+		"data/conversions.csv",
+		"data/mmcif_pdbx_v50.dic",
+	)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "conversion_to_cif_fails",
+			"message": err.Error(),
+		})
+		return
+	}
+	err = parser.WriteCif(cifText, fileScientificMetaPath)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "writing_cif_fails",
+			"message": err.Error(),
+		})
+		return
+	}
+
+	c.Header("Content-Type", "application/octet-stream")
+	c.FileAttachment(fileScientificMetaPath, "metadata.cif")
+
+	defer os.Remove(fileScientificMetaPath)
+
+}
+
+// EmpiarSchema handles creating of json file according to schema at https://github.com/emdb-empiar/empiar-depositor/blob/master/empiar_depositor/empiar_deposition.schema.json
+// @Summary creates a json file with metadata for deposition to EMPIAR
+// @Description NA
+// @Tags empiar
+// @Accept application/json
+// @Produce json
+// @Success 200 {object} string "base64 encoded schema"
+// @Failure 400 {object} onedep.ResponseType "Error response"
+// @Failure 500 {object} onedep.ResponseType "Internal server error"
+// @Router /empiar/schema [get]
+func EmpiarSchema(c *gin.Context) {
+	schema, err := os.ReadFile("data/empiar_deposition.schema.json")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "no_empiar_schema",
+			"message": err.Error(),
+		})
+		return
+	}
+	if !IsValidJSON(string(schema)) {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "schema_invalid",
+			"message": err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"schema": b64.StdEncoding.EncodeToString(schema),
+	})
+	return
+}
+
 //	returns the current version of the depositor
 //
 // @Summary Return current version
@@ -672,6 +862,7 @@ func StartProcess(c *gin.Context) {
 // @Tags version
 // @Produce json
 // @Success 200 {string} string "Depositior version"
+// @Failure 400 {object} string "Error response"
 // @Router /version [get]
 func GetVersion(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"version": version})
@@ -696,6 +887,9 @@ func main() {
 	router.POST("/onedep/:depID/process", StartProcess)
 	router.POST("/onedep/metadata", DownloadMetadata)
 	router.POST("/onedep/pdb", DownloadCoordinatesWithMetadata)
+
+	router.POST("/empiar/metadata", EmpiarMetadata)
+	router.GET("/empiar/schema", EmpiarSchema)
 
 	if err := router.Run(":" + PORT); err != nil {
 		fmt.Fprintf(os.Stderr, "Failed to start server: %v\n", err)
